Fix contacts and message lists gap

--- a/app/sass/components/_contact.scss
+++ b/app/sass/components/_contact.scss
@@ -5,7 +5,7 @@
   padding-top: 21px;
 	padding-bottom: 22px;
 	padding-left: 1rem;
-  padding-right: 1.5rem;
+  padding-right: 2.5rem;
   color: $gray-900;
   text-decoration: none;
 
